@@ -8,4 +8,4 @@
 Company=Michael G. Brehm
 Copyright=
 Product=zuki.pvr.hdhomerundvr
-Version=1.2.10
+Version=1.2.11
